--- a/src/main/resources/templates/RegisterPage.html
+++ b/src/main/resources/templates/RegisterPage.html
@@ -8,19 +8,17 @@
 </head>
 <body>
 <div class="wrapper">
+    <!-- Sidebar -->
     <div class="sidebar">
         <div class="logo">
-            <img src="assets/logo.png" alt="EXPEN$IFY" class="logo-img">
+            <img src="/images/expensifylogo.png" alt="EXPEN$IFY" class="logo-img">
         </div>
         <ul>
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Transactions</a></li>
-            <li><a href="#">Bills</a></li>
-            <li><a href="#">Budgets</a></li>
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Settings</a></li>
+
         </ul>
     </div>
+
+    <!-- Main Content -->
     <div class="content">
         <div class="register-container">
             <h2>Create your EXPEN$IFY Account</h2>
