--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -7,38 +7,36 @@
     <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-    <div class="wrapper">
-        <div class="sidebar">
-            <div class="logo">
-                <img src="assets/logo.png" alt="EXPEN$IFY" class="logo-img">
-            </div>
-            <ul>
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Transactions</a></li>
-                <li><a href="#">Bills</a></li>
-                <li><a href="#">Budgets</a></li>
-                <li><a href="#">Reports</a></li>
-                <li><a href="#">Settings</a></li>
-            </ul>
+<div class="wrapper">
+    <!-- Sidebar (Fixed) -->
+    <div class="sidebar">
+        <div class="logo">
+            <img src="/images/expensifylogo.png" alt="EXPEN$IFY" class="logo-img">
         </div>
-        <div class="content">
-            <div class="login-container">
-                <h2>Login to EXPEN$IFY</h2>
-                <p>Access your account to manage your finances.</p>
-                <form action="/users/login" method="POST">
-                    <div class="input-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="you@example.com" required>
-                    </div>
-                    <div class="input-group">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password" placeholder="******" required>
-                    </div>
-                    <button type="submit" class="btn">Sign In</button>
-                </form>
-                <p class="register-link">Don't have an account? <a href="/register">Register here</a></p>
-            </div>
+        <ul>
+
+        </ul>
+    </div>
+
+    <!-- Main Content -->
+    <div class="content">
+        <div class="login-container">
+            <h2>Login to EXPEN$IFY</h2>
+            <p>Access your account to manage your finances.</p>
+            <form action="/users/login" method="POST">
+                <div class="input-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="you@example.com" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" placeholder="******" required>
+                </div>
+                <button type="submit" class="btn">Sign In</button>
+            </form>
+            <p class="register-link">Don't have an account? <a href="http://localhost:8080/users/register">Register here</a></p>
         </div>
     </div>
+</div>
 </body>
 </html>
