--- a/src/main/resources/templates/RegisterPage.html
+++ b/src/main/resources/templates/RegisterPage.html
@@ -43,6 +43,7 @@
                 <div class="input-group">
                     <label for="currency">Default Currency</label>
                     <select id="currency" name="currency">
+                        <option value="MYR" selected>MYR - Malaysian Ringgit</option>
                         <option value="USD">USD - US Dollar</option>
                         <option value="EUR">EUR - Euro</option>
                         <option value="GBP">GBP - British Pound</option>
